# theswarm

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  opus7.md  pyproject.toml  the-bigger-swarm.md  theswarm-04.md  theswarm-05.md  theswarm.yaml
.playwright-mcp/: page-2026-04-16T19-46-30-606Z.yml  page-2026-04-16T19-46-54-860Z.yml  page-2026-04-16T19-47-04-913Z.yml  page-2026-04-16T19-47-13-132Z.yml  page-2026-04-16T19-47-21-184Z.yml  page-2026-04-16T19-47-28-539Z.yml  page-2026-04-16T19-47-36-311Z.yml  page-2026-04-16T20-01-27-724Z.yml
docs/: ARCHITECTURE-V2.md  DASHBOARD_TEST_PLAN.md  DASHBOARD_UX_AUDIT.md  ROLES-OVERVIEW.md  dev-role-dashboard.md  index.html  presentation.html
scripts/: gen_sprint_demo.py  record_sprint_g_walkthrough.py  record_sprint_walkthrough.py
tests/: conftest.py  test_agents_base.py  test_agents_dev.py  test_agents_md.py  test_agents_po.py  test_agents_qa.py  test_agents_qa_real_mode.py  test_agents_real_mode.py  test_agents_techlead.py  test_api.py  test_api_demo_ready.py  test_approval.py  test_autonomous.py  test_claude_backoff.py  test_claude_cli_backend.py  test_common_config.py  test_condenser.py  test_config.py  test_cycle.py  test_cycle_log.py  test_cycle_log_real.py  test_cycle_phase_timeout.py  test_cycle_real.py  test_dashboard.py  test_dashboard_endpoints.py  test_feedback.py  test_gateway_app.py  test_gateway_cycle_runner.py  test_gateway_demo_notifications.py  test_gateway_queries.py  test_gateway_stories.py  test_gateway_wiring.py  test_hashline.py  test_main.py  test_memory.py  (+16 more)
(+664 files in other folders)
