[project]
name = "theswarm"
version = "1.0.0"
description = "TheSwarm: Autonomous AI dev team (PO, TechLead, Dev, QA)"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "PyGithub>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-multipart>=0.0.18",
    "anthropic>=0.42",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "mattermostdriver>=7.3",
    "aiosqlite>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pytest-mock>=3.14",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/theswarm", "src/theswarm_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
